<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.Quiz.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/city_image"
            android:contentDescription="@string/title" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/choice1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="choice1Check"
            android:text="@string/choice1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/choice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="choice2Check"
            android:text="@string/choice2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/choice3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="choice3Check"
            android:text="@string/choice3"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>